--- a/src/app/template/template.component.html
+++ b/src/app/template/template.component.html
@@ -176,7 +176,8 @@
     </mat-error>
     <br><br>
 
-    <button type = " submit " mat-raised-button color="accent" [disabled]=!userform.valid>Submit</button>
+    <button type = " submit " mat-raised-button color="accent">Submit</button>
+
 
   </form>
   <br><br>
