Revert "template form"
This reverts commit bd7da80177d458d689575d16e584ee5c897bceec.

--- a/src/app/template/template.component.html
+++ b/src/app/template/template.component.html
@@ -176,8 +176,7 @@
     </mat-error>
     <br><br>
 
-    <button type = " submit " mat-raised-button color="accent">Submit</button>
-
+    <button type = " submit " mat-raised-button color="accent" [disabled]=!userform.valid>Submit</button>
 
   </form>
   <br><br>
